--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -398,26 +398,26 @@ broad_5 : "ᴀsɪsᴛᴀɴ 2, {0} sᴏʜʙᴇᴛᴛᴇ ʏᴀʏıɴʟᴀɴᴅı\n
 broad_6 : "ᴀsɪsᴛᴀɴ 3, {0} sᴏʜʙᴇᴛᴛᴇ ʏᴀʏıɴʟᴀɴᴅı\n"
 broad_7 : "ᴀsɪsᴛᴀɴ 4, {0} sᴏʜʙᴇᴛᴛᴇ ʏᴀʏıɴʟᴀɴᴅı\n"
 broad_8 : "ᴀsɪsᴛᴀɴ 5, {0} sᴏʜʙᴇᴛᴛᴇ ʏᴀʏıɴʟᴀɴᴅı\n"
-broad_9 : "**ᴋᴜʟʟᴀɴıᴍ**:\n/broadcast [Mesaj] veya [Bir Mesajı Yanıtla]"
-broad_10 : "Lütfen yayınlamak için biraz metin sağlayın."
-broad_11 : "**{0} Kullanıcıya Yayınlanan Mesaj.**"
+broad_9 : "**ᴋᴜʟʟᴀɴıᴍ**:\n/broadcast [ᴍᴇsᴀᴊ] ᴠᴇʏᴀ [ʙɪʀ ᴍᴇsᴀᴊı ʏᴀɴıᴛʟᴀ]"
+broad_10 : "ʟᴜ̈ᴛғᴇɴ ʏᴀʏıɴʟᴀᴍᴀᴋ ɪᴄ̧ɪɴ ʙɪʀᴀᴢ ᴍᴇᴛɪɴ sᴀɢ̆ʟᴀʏıɴ."
+broad_11 : "**{0} ᴋᴜʟʟᴀɴıᴄıʏᴀ ʏᴀʏıɴʟᴀɴᴀɴ ᴍᴇsᴀᴊ.**"
 
 #Heroku
-heroku_1 : "Please make sure your Heroku API Key, Your App name are configured correctly in the heroku"
-heroku_2 : "You can only get logs of Heroku Apps"
-heroku_3 : "**Usage:**\n/get_var [Var Name]"
-heroku_4 : "Unable to find any such var."
-heroku_5 : ".env file not found."
-heroku_6 : "**Usage:**\n/del_var [Var Name]"
-heroku_7 : "{0} Deleted."
-heroku_8 : "**Usage:**\n/set_var [Var Name] [Var Value]"
-heroku_9 : "{0} has been updated successfully"
-heroku_10 : "{0} has been added successfully"
-heroku_11 : "Only for Heroku Apps"
-heroku_12 : "Checking Heroku Usage. Please Wait"
-heroku_13 : "Mevcut güncellemeler kontrol ediliyor...‌‌"
-heroku_14 : "Git Command Error"
-heroku_15 : "Invalid Git Repsitory"
+heroku_1 : "ʟᴜ̈ᴛғᴇɴ ʜᴇʀᴏᴋᴜ ᴀᴘɪ ᴀɴᴀʜᴛᴀʀıɴıᴢıɴ ᴠᴇ ᴜʏɢᴜʟᴀᴍᴀ ᴀᴅıɴıᴢıɴ ʜᴇʀᴏᴋᴜ'ᴅᴀ ᴅᴏɢ̆ʀᴜ şᴇᴋɪʟᴅᴇ ʏᴀᴘıʟᴀɴᴅıʀıʟᴅıɢ̆ıɴᴅᴀɴ ᴇᴍɪɴ ᴏʟᴜɴ."
+heroku_2 : "ʏᴀʟɴıᴢᴄᴀ ʜᴇʀᴏᴋᴜ ᴜʏɢᴜʟᴀᴍᴀʟᴀʀıɴıɴ ɢᴜ̈ɴʟᴜ̈ᴋʟᴇʀɪɴɪ ᴀʟᴀʙɪʟɪʀsɪɴɪᴢ."
+heroku_3 : "**ᴋᴜʟʟᴀɴıᴍ:**\n/get_var [ᴠᴀʀ ᴀᴅı]"
+heroku_4 : "ʙᴏ̈ʏʟᴇ ʙɪʀ ᴠᴀʀ ʙᴜʟᴜɴᴀᴍıʏᴏʀ."
+heroku_5 : ".ᴇɴᴠ ᴅᴏsʏᴀsı ʙᴜʟᴜɴᴀᴍᴀᴅı."
+heroku_6 : "**ᴋᴜʟʟᴀɴıᴍ:**\n/del_var [ᴠᴀʀ ᴀᴅı]"
+heroku_7 : "{0} sɪʟɪɴᴅɪ."
+heroku_8 : "**ᴋᴜʟʟᴀɴıᴍ:**\n/set_var [ᴠᴀʀ ᴀᴅı] [ᴠᴀʀ ᴅᴇɢ̆ᴇʀɪ]"
+heroku_9 : "{0} ʙᴀşᴀʀıʏʟᴀ ɢᴜ̈ɴᴄᴇʟʟᴇɴᴅɪ ✅"
+heroku_10 : "{0} ʙᴀşᴀʀıʏʟᴀ ᴇᴋʟᴇɴᴅɪ ✅"
+heroku_11 : "ʏᴀʟɴıᴢᴄᴀ ʜᴇʀᴏᴋᴜ ᴜʏɢᴜʟᴀᴍᴀʟᴀʀı ɪᴄ̧ɪɴ."
+heroku_12 : "ʜᴇʀᴏᴋᴜ ᴋᴜʟʟᴀɴıᴍıɴı ᴋᴏɴᴛʀᴏʟ ᴇᴅɪʟɪʏᴏʀ... ʟᴜ̈ᴛғᴇɴ ʙᴇᴋʟᴇʏɪɴ ⏳"
+heroku_13 : "ᴍᴇᴠᴄᴜᴛ ɢᴜ̈ɴᴄᴇʟʟᴇᴍᴇʟᴇʀ ᴋᴏɴᴛʀᴏʟ ᴇᴅɪʟɪʏᴏʀ...‌‌"
+heroku_14 : "ɢɪᴛ ᴋᴏᴍᴜᴛ ʜᴀᴛᴀsı"
+heroku_15 : "ɢᴇᴄ̧ᴇʀsɪᴢ ɢɪᴛ ᴅᴇᴘᴏsᴜ"
 
 #Private bot mode
 pbot_1 : "**Kullanım:**\n/authorize [CHAT_ID]"
