--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -420,11 +420,11 @@ heroku_14 : "ɢɪᴛ ᴋᴏᴍᴜᴛ ʜᴀᴛᴀsı"
 heroku_15 : "ɢᴇᴄ̧ᴇʀsɪᴢ ɢɪᴛ ᴅᴇᴘᴏsᴜ"
 
 #Private bot mode
-pbot_1 : "**Kullanım:**\n/authorize [CHAT_ID]"
-pbot_2 :  "**Kullanım:**\n/unauthorize [CHAT_ID]"
-pbot_3 : "Yetkili listeye verilen sohbet eklendi"
-pbot_4 : "Verilen sohbet yetkili listeden kaldırıldı"
-pbot_5 : "Sohbet zaten yetkili listede"
+pbot_1 : "**ᴋᴜʟʟᴀɴıᴍ:**\n/authorize [ᴄʜᴀᴛ_ɪᴅ]"
+pbot_2 :  "**ᴋᴜʟʟᴀɴıᴍ:**\n/unauthorize [ᴄʜᴀᴛ_ɪᴅ]"
+pbot_3 : "ʏᴇᴛᴋɪʟɪ ʟɪsᴛᴇʏᴇ ᴠᴇʀɪʟᴇɴ sᴏʜʙᴇᴛ ᴇᴋʟᴇɴᴅɪ ✅"
+pbot_4 : "ᴠᴇʀɪʟᴇɴ sᴏʜʙᴇᴛ ʏᴇᴛᴋɪʟɪ ʟɪsᴛᴇᴅᴇɴ ᴋᴀʟᴅıʀıʟᴅı ✅"
+pbot_5 : "sᴏʜʙᴇᴛ ᴢᴀᴛᴇɴ ʏᴇᴛᴋɪʟɪ ʟɪsᴛᴇᴅᴇ"
 pbot_6 : "Yetkili listede böyle bir sohbet yok"
 pbot_7 : "Chat_id doğrulanamadı.\n\nSayısal olduğundan ve doğru biçimde olduğundan emin olun. Sohbet kullanıcı adı veya bağlantıları kullanmayın."
 pbot_8 : "Lütfen bekleyin... Yetkili sohbetler getiriliyor. ❄️"
