--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -425,28 +425,28 @@ pbot_2 :  "**ᴋᴜʟʟᴀɴıᴍ:**\n/unauthorize [ᴄʜᴀᴛ_ɪᴅ]"
 pbot_3 : "ʏᴇᴛᴋɪʟɪ ʟɪsᴛᴇʏᴇ ᴠᴇʀɪʟᴇɴ sᴏʜʙᴇᴛ ᴇᴋʟᴇɴᴅɪ ✅"
 pbot_4 : "ᴠᴇʀɪʟᴇɴ sᴏʜʙᴇᴛ ʏᴇᴛᴋɪʟɪ ʟɪsᴛᴇᴅᴇɴ ᴋᴀʟᴅıʀıʟᴅı ✅"
 pbot_5 : "sᴏʜʙᴇᴛ ᴢᴀᴛᴇɴ ʏᴇᴛᴋɪʟɪ ʟɪsᴛᴇᴅᴇ"
-pbot_6 : "Yetkili listede böyle bir sohbet yok"
-pbot_7 : "Chat_id doğrulanamadı.\n\nSayısal olduğundan ve doğru biçimde olduğundan emin olun. Sohbet kullanıcı adı veya bağlantıları kullanmayın."
-pbot_8 : "Lütfen bekleyin... Yetkili sohbetler getiriliyor. ❄️"
-pbot_9 : "**<b>Getirilen Sohbetler:</b>**\n\n"
-pbot_10 : "Özel sohbet"
-pbot_11 : "Yetkili sohbet bulunamadı"
-pbot_12 : "Özel Bot Modu devre dışı.\n\nBotunuzu özel bot olarak kullanmak için **PRIVATE_BOT_MODE** = **True** olarak ayarladığınızdan emin olun"
-pbot_13 : "\n**<b>Getirilmeyen Sohbetler:</b>**\n\n"
+pbot_6 : "ʏᴇᴛᴋɪʟɪ ʟɪsᴛᴇᴅᴇ ʙᴏ̈ʏʟᴇ ʙɪʀ sᴏʜʙᴇᴛ ʏᴏᴋ"
+pbot_7 : "ᴄʜᴀᴛ_ɪᴅ ᴅᴏɢ̆ʀᴜʟᴀɴᴀᴍᴀᴅı.\n\nsᴀʏısᴀʟ ᴏʟᴅᴜɢ̆ᴜɴᴅᴀɴ ᴠᴇ ᴅᴏɢ̆ʀᴜ ʙɪᴄ̧ɪᴍᴅᴇ ᴏʟᴅᴜɢ̆ᴜɴᴅᴀɴ ᴇᴍɪɴ ᴏʟᴜɴ. sᴏʜʙᴇᴛ ᴋᴜʟʟᴀɴıᴄı ᴀᴅı ᴠᴇʏᴀ ʙᴀɢ̆ʟᴀɴᴛıʟᴀʀı ᴋᴜʟʟᴀɴᴍᴀʏıɴ."
+pbot_8 : "ʟᴜ̈ᴛғᴇɴ ʙᴇᴋʟᴇʏɪɴ... ʏᴇᴛᴋɪʟɪ sᴏʜʙᴇᴛʟᴇʀ ɢᴇᴛɪʀɪʟɪʏᴏʀ... ⏳"
+pbot_9 : "**<b>ɢᴇᴛɪʀɪʟᴇɴ sᴏʜʙᴇᴛʟᴇʀ:</b>**\n\n"
+pbot_10 : "ᴏ̈ᴢᴇʟ sᴏʜʙᴇᴛ"
+pbot_11 : "ʏᴇᴛᴋɪʟɪ sᴏʜʙᴇᴛ ʙᴜʟᴜɴᴀᴍᴀᴅı"
+pbot_12 : "ᴏ̈ᴢᴇʟ ʙᴏᴛ ᴍᴏᴅᴜ ᴅᴇᴠʀᴇ ᴅışı.\n\nʙᴏᴛᴜɴᴜᴢᴜ ᴏ̈ᴢᴇʟ ʙᴏᴛ ᴏʟᴀʀᴀᴋ ᴋᴜʟʟᴀɴᴍᴀᴋ ɪᴄ̧ɪɴ **ᴘʀɪᴠᴀᴛᴇ_ʙᴏᴛ_ᴍᴏᴅᴇ** = **ᴛʀᴜᴇ** ᴏʟᴀʀᴀᴋ ᴀʏᴀʀʟᴀᴅıɢ̆ıɴıᴢᴅᴀɴ ᴇᴍɪɴ ᴏʟᴜɴ."
+pbot_13 : "\n**<b>ɢᴇᴛɪʀɪʟᴍᴇʏᴇɴ sᴏʜʙᴇᴛʟᴇʀ:</b>**\n\n"
 
 
 #Gbanned
-gban_1 : "Kendini Mi Banlamak İstiyorsun? Ne Kadar Da Aptalsın😂😂"
-gban_2 : "Kenidimi Mi Banlicam? LoL😂😂"
-gban_3 : "Bir Sudo Kullanıcısını Mı Banlayacaksın asdfsddsfdsd"
-gban_4 : "{0} is already **gbanned** from the bot."
-gban_5 : "**Initializing Gobal Ban on {0}**\n\nExpected Time : {1}."
-gban_6 : "**Gbanned Başarılı**\n\nBanned **{0}** from **{1}** chats."
-gban_7 : "{0} is not **gbanned **yet from the bot."
-gban_8 : "**Ungbanning {0}**\n\nExpected Time : {1}."
-gban_9 : "**UnGbanned Başarılı**\n\nUnbanned **{0}** in **{1}** chats."
-gban_10 : "Banlı Kullanıcı Yok. ❄️"
-gban_11 : "Please wait a while.. Fetching Gbanned users list ❄️"
+gban_1 : "ᴋᴇɴᴅɪɴɪ ᴍɪ ʙᴀɴʟᴀᴍᴀᴋ ɪ̇sᴛɪʏᴏʀsᴜɴ? ɴᴇ ᴋᴀᴅᴀʀ ᴅᴀ ᴀᴘᴛᴀʟsıɴ 😂😂"
+gban_2 : "ᴋᴇɴɪᴅɪᴍɪ ᴍɪ ʙᴀɴʟɪᴄᴀᴍ? ʟᴏʟ 😂😂"
+gban_3 : "ʙɪʀ sᴜᴅᴏ ᴋᴜʟʟᴀɴıᴄısıɴı ᴍı ʙᴀɴʟᴀʏᴀᴄᴀᴋsıɴ ᴀsᴅғsᴅᴅsғᴅsᴅ"
+gban_4 : "{0} ᴢᴀᴛᴇɴ ʙᴏᴛ ᴛᴀʀᴀғıɴᴅᴀɴ **ʏᴀsᴀᴋʟᴀɴᴅı**."
+gban_5 : "**ɢʟᴏʙᴀʟ ʏᴀsᴀᴋ ᴀᴛıʟıʏᴏʀ {0}**\n\nʙᴇᴋʟᴇɴᴇɴ ᴢᴀᴍᴀɴ : {1}."
+gban_6 : "**ɢʟᴏʙᴀʟ ʙᴀɴ ʙᴀşᴀʀıʟı**\n\nʏᴀsᴀᴋʟᴀɴᴅı **{0}** ɪᴛɪʙᴀʀᴇɴ **{1}** sᴏʜʙᴇᴛʟᴇʀ."
+gban_7 : "{0} ʜᴇɴᴜ̈ᴢ ʙᴏᴛᴛᴀɴ **ʏᴀsᴀᴋʟᴀɴᴍᴀᴅı**."
+gban_8 : "**ɢʟᴏʙᴀʟ ʏᴀsᴀᴋ ᴋᴀʟᴅıʀıʟıʏᴏʀ {0}**\n\nʙᴇᴋʟᴇɴᴇɴ ᴢᴀᴍᴀɴ : {1}."
+gban_9 : "**ʏᴀsᴀᴋ ᴋᴀʟᴅıʀᴍᴀ ʙᴀşᴀʀıʟı**\n\nʏᴀsᴀᴋ ᴋᴀʟᴅıʀıʟᴅı **{0}** ɪᴄ̧ɪɴ **{1}** sᴏʜʙᴇᴛʟᴇʀ."
+gban_10 : "ʙᴀɴʟı ᴋᴜʟʟᴀɴıᴄı ʏᴏᴋ. 🥳"
+gban_11 : "ʟᴜ̈ᴛғᴇɴ ʙɪʀ sᴜ̈ʀᴇ ʙᴇᴋʟᴇʏɪɴ.. ɢʟᴏʙᴀʟ ʏᴀsᴀᴋʟı ᴋᴜʟʟᴀɴıᴄı ʟɪsᴛᴇsɪ ɢᴇᴛɪʀɪʟɪʏᴏʀ ⏳"
 
 #Suggestions
 sug_0 : "❓**Biliyor Musunuz?**\n\n✅ "
