--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -55,7 +55,7 @@ admin_16 : "ʙᴇʟɪʀʟɪ ʙɪʀ ᴘᴀʀᴄ̧ᴀʏᴀ ɢᴇᴄ̧ɪʟᴇᴍᴇ
 admin_17 : "{0}.. ʟᴜ̈ᴛғᴇɴ ʙᴇᴋʟᴇʏɪɴ. 🔮"
 admin_18 : "ʏᴏ̈ɴᴇᴛɪᴄɪ ʟɪsᴛᴇsɪ ʙᴜʟᴜɴᴀᴍᴀᴅı\n\nʟᴜ̈ᴛғᴇɴ ʏᴏ̈ɴᴇᴛɪᴄɪ ʟɪsᴛᴇsɪɴɪ /ᴀᴅᴍɪɴᴄᴀᴄʜᴇ ᴠᴇʏᴀ /ʀᴇʟᴏᴀᴅ ʏᴏʟᴜʏʟᴀ ɢᴜ̈ɴᴄᴇʟʟᴇʏɪɴ. 🔮"
 admin_19 : "ʙᴜɴᴜ ɢᴇʀᴄ̧ᴇᴋʟᴇşᴛɪʀᴍᴇᴋ ɪᴄ̧ɪɴ sᴇsʟɪ sᴏʜʙᴇᴛ ʜᴀᴋʟᴀʀıɴᴀ sᴀʜɪᴘ ʏᴏ̈ɴᴇᴛɪᴄɪ ᴏʟᴍᴀɴıᴢ ɢᴇʀᴇᴋɪʀ.\nᴢᴀᴛᴇɴ ʏᴏ̈ɴᴇᴛɪᴄɪʏsᴇɴɪᴢ, /ᴀᴅᴍɪɴᴄᴀᴄʜᴇ ᴀʀᴀᴄıʟıɢ̆ıʏʟᴀ ᴀᴅᴍɪɴᴄᴀᴄʜᴇ'ɪ ʏᴇɴɪᴅᴇɴ ʏᴜ̈ᴋʟᴇʏɪɴ. 🔮"
-admin_20 : "**⟲ ʏᴏ̈ɴᴇᴛɪᴄɪ ʟɪsᴛᴇsɪ ɢᴜ̈ɴᴄᴇʟʟᴇɴᴅɪ\n⟲ ʙᴏᴛ ɢᴜ̈ɴᴄᴇʟʟᴇɴᴅɪ** 🔮"
+admin_20 : "**⟲ ʏᴏ̈ɴᴇᴛɪᴄɪ ʟɪsᴛᴇsɪ ɢᴜ̈ɴᴄᴇʟʟᴇɴᴅɪ\n⟲ ʙᴏᴛ ɢᴜ̈ɴᴄᴇʟʟᴇɴᴅɪ**"
 admin_21 : "sıʀᴀᴅᴀ ᴋᴀʀışᴛıʀıʟᴀᴄᴀᴋ ʙɪʀ şᴇʏ ʏᴏᴋ ❌"
 admin_22 : "ᴋᴀʀışᴛıʀıʟᴀᴍᴀᴅı.\n\nsıʀᴀʏı ᴋᴏɴᴛʀᴏʟ ᴇᴅɪɴ: /sɪʀᴀ"
 admin_23 : "**sıʀᴀ ᴋᴀʀışᴛıʀıʟᴅı: {0}**\n\nᴋᴀʀışᴛıʀıʟᴀɴ sıʀᴀʏı ᴋᴏɴᴛʀᴏʟ ᴇᴅɪɴ: /sɪʀᴀ"
