--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -238,7 +238,7 @@ stream_4 : "┏━━━━━━━━━━━━━━━━⧫\n┠ 🀄 **S
 
 #General Buttons
 CLOSE_BUTTON  : "ᴋᴀᴘᴀᴛ"
-CLOSEMENU_BUTTON  : "ᴍᴇɴᴜ̈ʏᴜ̈ ᴋᴀᴘᴀᴛ"
+CLOSEMENU_BUTTON  : "𝗠𝗲𝗻𝘂̈𝘆𝘂̈ 𝗞𝗮𝗽𝗮𝘁"
 BACK_BUTTON : "ɢᴇʀɪ"
 UNBAN_BUTTON : "ᴀsɪsᴛᴀɴ ʏᴀsᴀɢ̆ɪɴɪ ᴋᴀʟᴅɪʀ"
 
@@ -250,18 +250,18 @@ S_B_1 : "🗒 ᴋᴏᴍᴜᴛʟᴀʀ"
 S_B_2 : "🔧 ᴀʏᴀʀʟᴀʀ"
 S_B_3 : "🎉 ᴅᴇsᴛᴇᴋ ɢʀᴜʙᴜ"
 S_B_4 : "🎩 ᴅᴜʏᴜʀᴜ"
-S_B_5 : "✚ ʙᴇɴɪ ɢʀᴜʙᴜɴᴀ ᴇᴋʟᴇ"
+S_B_5 : "✚ 𝗯𝗲𝗻𝗶 𝗴𝗿𝘂𝗯𝘂𝗻𝗮 𝗲𝗸𝗹𝗲"
 S_B_6 : "ɢɪᴛ ʀᴇᴘᴏ"
-S_B_7 : "❤️‍🔥 ᴅᴇᴠᴇʟᴏᴘᴇʀ"
-S_B_8 : "📚 ᴋᴏᴍᴜᴛʟᴀʀ ᴍᴇɴᴜ̈sᴜ̈"
+S_B_7 : "❤️‍🔥 𝘀𝗮𝗵𝗶𝗯𝗶"
+S_B_8 : "📚 𝗸𝗼𝗺𝘂𝘁𝗹𝗮𝗿 𝗺𝗲𝗻𝘂̈𝘀𝘂̈"
 
 #Help 
-H_B_1 : "💎 ᴀᴅᴍɪɴ ᴋᴏᴍᴜᴛʟᴀʀı"
-H_B_2 : "🎧 ᴏʏɴᴀᴛᴍᴀ ᴋᴏᴍᴜᴛʟᴀʀı"
-H_B_3 : "🤖 ʙᴏᴛ ᴋᴏᴍᴜᴛʟᴀʀı"
-H_B_4 : "🎁 ᴇᴋsᴛʀᴀ ᴋᴏᴍᴜᴛʟᴀʀ"
-H_B_5 : "💣 ᴍᴇɴᴜ̈ʏᴜ̈ ᴋᴀᴘᴀᴛ"
-H_B_6 : "🐙 sᴜᴅᴏ ᴋᴏᴍᴜᴛʟᴀʀı"
+H_B_1 : "💎 𝗔𝗱𝗺𝗶𝗻 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿"
+H_B_2 : "🎧 𝗢𝘆𝗻𝗮𝘁𝗺𝗮 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿"
+H_B_3 : "🤖 𝗕𝗼𝘁 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿"
+H_B_4 : "🎁 𝗘𝘅𝘁𝗿𝗮 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿"
+H_B_5 : "💣 𝗠𝗲𝗻𝘂̈𝘆𝘂̈ 𝗞𝗮𝗽𝗮𝘁"
+H_B_6 : "🐙 𝗦𝘂𝗱𝗼 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿𝗶"
 
 #PlayMode
 PM_B_1 : "DirectPlay"
@@ -276,8 +276,8 @@ P_B_4 : "🎵 ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇʟᴇʀɪᴍɪ ᴏʏɴᴀᴛ"
 
 #Playlist
 PL_B_1 : "⚡ ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇʟᴇʀɪᴍɪ ᴏʏɴᴀᴛ"
-PL_B_2 : "✅ ʟɪsᴛᴇᴍᴇ ᴇᴋʟᴇ"
-PL_B_3 : "⚙️ ᴋᴏɴᴛʀᴏʟ ᴘᴀɴᴇʟɪ"
+PL_B_2 : "✅ 𝗟𝗶𝘀𝘁𝗲𝗺𝗲 𝗲𝗸𝗹𝗲"
+PL_B_3 : "⚙️ 𝗞𝗼𝗻𝘁𝗿𝗼𝗹 𝗣𝗮𝗻𝗲𝗹𝗶"
 PL_B_4 : "📡 ᴏʏɴᴀᴛᴍᴀ ᴍᴏᴅᴜ"
 PL_B_5 : "🔄 ᴛᴜ̈ᴍ ʟɪsᴛᴇʏɪ sɪʟ"
 PL_B_6 : "↗️ ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇsɪɴɪ sɪʟ"
