--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -256,13 +256,11 @@ S_B_7 : "❤️‍🔥 𝘀𝗮𝗵𝗶𝗯𝗶"
 S_B_8 : "📚 𝗸𝗼𝗺𝘂𝘁𝗹𝗮𝗿 𝗺𝗲𝗻𝘂̈𝘀𝘂̈"
 
 #Help 
-H_B_1 : "💎 𝗔𝗱𝗺𝗶𝗻 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿"
-H_B_2 : "🎧 𝗢𝘆𝗻𝗮𝘁𝗺𝗮 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿"
-H_B_3 : "🤖 𝗕𝗼𝘁 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿"
-H_B_4 : "🎁 𝗘𝘅𝘁𝗿𝗮 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿"
-H_B_5 : "💣 𝗠𝗲𝗻𝘂̈𝘆𝘂̈ 𝗞𝗮𝗽𝗮𝘁"
-H_B_6 : "🐙 𝗦𝘂𝗱𝗼 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿𝗶"
-
+H_B_1 : "💎Admin"
+H_B_2 : "🎧Oynat"
+H_B_3 : "🤖Extra"
+H_B_4 : "🎭Eğlence komutları"
+H_B_7 : "🏷️Etiket komutları"
 #PlayMode
 PM_B_1 : "DirectPlay"
 PM_B_2 : "InlineMarkup"
