--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -75,7 +75,7 @@ admin_34 : "ɪ̇ʟᴇʀɪ sᴀʀıʟıʀᴋᴇɴ ʜᴀᴛᴀ ᴏʟᴜşᴛᴜ."
 
 # Start
 start_1 : "**ʙᴇɴɪ {0} ɢʀᴜʙᴜɴᴜᴢᴀ ᴅᴀᴠᴇᴛ ᴇᴛᴛɪɢ̆ɪɴɪᴢ ɪ̇ᴄ̧ɪɴ ᴛᴇşᴇᴋᴋᴜ̈ʀʟᴇʀ.\n{1} ᴄ̧ᴀʟışıʏᴏʀ. 🔮\n\nʜᴇʀʜᴀɴɢɪ ʙɪʀ ʏᴀʀᴅıᴍ ᴀʟᴍᴀᴋ ɪ̇ᴄ̧ɪɴ ᴅᴇsᴛᴇᴋ ɢʀᴜʙᴜᴍᴜᴢᴀ ᴠᴇʏᴀ ᴋᴀɴᴀʟıᴍıᴢᴀ ɢᴏ̈ᴢ ᴀᴛıɴ.**"
-start_2 : "**ʟᴏsᴛ ᴍᴜ̈ᴢɪᴋ'ᴇ ʜᴏş ɢᴇʟᴅɪɴ 🔮\n\nɢʀᴜʙᴜɴᴜᴢᴀ ᴇᴋʟᴇʏᴇʀᴇᴋ sᴇsʟɪ sᴏʜʙᴇᴛʟᴇʀɪɴɪᴢᴅᴇ ᴋᴀʟɪᴛᴇʟɪ ᴍᴜ̈ᴢɪᴋ ᴅɪɴʟᴇʏᴇʙɪʟɪʀsɪɴɪᴢ.**"
+start_2 : "**merve muzik'ᴇ ʜᴏş ɢᴇʟᴅɪɴ 🔮\n\nɢʀᴜʙᴜɴᴜᴢᴀ ᴇᴋʟᴇʏᴇʀᴇᴋ sᴇsʟɪ sᴏʜʙᴇᴛʟᴇʀɪɴɪᴢᴅᴇ ᴋᴀʟɪᴛᴇʟɪ ᴍᴜ̈ᴢɪᴋ ᴅɪɴʟᴇʏᴇʙɪʟɪʀsɪɴɪᴢ.**"
 start_3 : "**ʙᴇɴɪ ɢʀᴜʙᴜɴᴜᴢᴀ ᴅᴀᴠᴇᴛ ᴇᴛᴛɪɢ̆ɪɴɪᴢ ɪ̇ᴄ̧ɪɴ ᴛᴇşᴇᴋᴋᴜ̈ʀʟᴇʀ..**\n\n**ᴄ̧ᴀʟışᴍᴀᴋ ɪᴄ̧ɪɴ sᴀᴅᴇᴄᴇ sᴇsʟɪ sᴏʜʙᴇᴛʟᴇʀɪ ʏᴏ̈ɴᴇᴛᴍᴇ ᴠᴇ ɢʀᴜʙᴀ ᴅᴀᴠᴇᴛ ᴇᴛᴍᴇ ʏᴇᴛᴋɪsɪ ᴠᴇʀᴍᴇɴɪᴢ ʏᴇᴛᴇʀʟɪᴅɪʀ.** 🔮\n\n**ᴀsɪsᴛᴀɴ ᴋᴜʟʟᴀɴıᴄı ᴀᴅı:** @{1}"
 start_4 : "**ʟᴏsᴛ ᴍᴜ̈ᴢɪᴋ'ɪɴ ɢᴇʟɪşᴛɪʀɪᴄɪsɪ/ᴋᴜʀᴜᴄᴜsᴜ {1} ɢʀᴜʙᴜɴᴜᴢᴀ ᴋᴀᴛıʟᴅı.** ❤️‍🔥"
 start_5 : "**ʟᴏsᴛ ᴍᴜ̈ᴢɪᴋ'ɪɴ ᴄ̧ᴏᴋ ᴋıʏᴍᴇᴛʟɪ {1} ʙᴇʏᴇғᴇɴᴅɪsɪɴɪɴ ɢʀᴜʙᴜɴᴜᴢᴀ ᴋᴀᴛıʟᴅıɢ̆ıɴı ғᴀʀᴋ ᴇᴛᴛɪᴋ. ᴋᴇɴᴅɪsɪɴᴇ sᴀʏɢıʟᴀʀıᴍı sᴜɴᴀʀıᴍ.** 🙏"
